[package]
name = "world-pumpkin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small world plugin for Pumpkin Minecraft servers."

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
tracing = "0.1"

[profile.release]
lto = true
opt-level = "z"
strip = true
