[package]
name = "world-pumpkin"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A small world plugin for Pumpkin Minecraft servers."

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", rev = "39596c1b9f9aab633cfca4dec419b1f4261e8f01", package = "pumpkin-plugin-api" }
tracing = "0.1"

[build-dependencies]
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin", rev = "39596c1b9f9aab633cfca4dec419b1f4261e8f01", package = "pumpkin-data", default-features = false, features = ["block", "tag"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
