[package]
name = "world-pumpkin"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A small world plugin for Pumpkin Minecraft servers."

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", rev = "7ff990c4683107f5f3aec635ad7ccd72a5ae9f5a", package = "pumpkin-plugin-api" }

[build-dependencies]
pumpkin-data = { git = "https://github.com/Pumpkin-MC/Pumpkin", rev = "7ff990c4683107f5f3aec635ad7ccd72a5ae9f5a", package = "pumpkin-data", default-features = false, features = ["block", "tag"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
